--- a/about_page.html
+++ b/about_page.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA_compatible" content="IE=edge">
+  <meta name="viewport" content="width=devide-width, initial-scale=1">
   <title>About | My First Site</title>
 </head>
 <body>
   <div>
     <h1>About Me</h1>
   </div>
-</body>    
+</body>
+</html>
