--- a/about_page.html
+++ b/about_page.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA_compatible" content="IE=edge">
   <meta name="viewport" content="width=devide-width, initial-scale=1">
   <title>About | My First Site</title>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
   <div>
